--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<section>
+  <h2>About TVESD</h2>
+  <div class="card">
+    <p>
+      The Visual Encyclopedia of Skin Disease (TVESD) is an educational initiative
+      focused on improving diagnostic awareness across diverse skin tones.
+      It exists to address long-standing gaps in dermatologic imagery and medical education.
+    </p>
+  </div>
+</section>
+
+<section>
+  <h2>Founder</h2>
+  <div class="card">
+    <p><strong>Keisha Joy</strong></p>
+    <p>
+      Founder of TVESD with a focus on health equity, public health, and accessible
+      medical education. This project was created to support inclusive learning
+      for students, clinicians, and healthcare professionals.
+    </p>
+  </div>
+</section>
 
