--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <section>
-  <h2>About TVESD</h2>
+  <h2>Conditions Library</h2>
+
   <div class="card">
-    <p>
-      The Visual Encyclopedia of Skin Disease (TVESD) is an educational initiative
-      focused on improving diagnostic awareness across diverse skin tones.
-      It exists to address long-standing gaps in dermatologic imagery and medical education.
-    </p>
+    <h3>Acne Vulgaris</h3>
+    <p><strong>Light skin tones:</strong> Erythema (redness), inflammatory papules, pustules.</p>
+    <p><strong>Medium skin tones:</strong> Hyperpigmented papules, nodules, less visible redness.</p>
+    <p><strong>Deep skin tones:</strong> Post-inflammatory hyperpigmentation, keloid risk, subtle inflammation.</p>
+    <p><em>Note:</em> Pigment changes and scarring may be more prominent in darker skin tones.</p>
+  </div>
+
+  <div class="card">
+    <h3>Atopic Dermatitis (Eczema)</h3>
+    <p><strong>Light skin tones:</strong> Red, inflamed patches with scaling.</p>
+    <p><strong>Medium skin tones:</strong> Purple or gray patches, lichenification.</p>
+    <p><strong>Deep skin tones:</strong> Ashy, thickened, darkened skin with less visible redness.</p>
+    <p><em>Note:</em> Erythema may be under-recognized in deeper skin tones.</p>
+  </div>
+
+  <div class="card">
+    <h3>Psoriasis</h3>
+    <p><strong>Light skin tones:</strong> Bright red plaques with silvery scale.</p>
+    <p><strong>Medium skin tones:</strong> Salmon-colored plaques with gray scale.</p>
+    <p><strong>Deep skin tones:</strong> Violet or dark brown plaques with minimal redness.</p>
+    <p><em>Note:</em> Psoriasis is often underdiagnosed in patients with darker skin.</p>
   </div>
 </section>
 
-<section>
-  <h2>Founder</h2>
-  <div class="card">
-    <p><strong>Keisha Joy</strong></p>
-    <p>
-      Founder of TVESD with a focus on health equity, public health, and accessible
-      medical education. This project was created to support inclusive learning
-      for students, clinicians, and healthcare professionals.
-    </p>
-  </div>
-</section>
 
