--- a/index.html
+++ b/index.html
@@ -26,4 +26,12 @@
   </div>
 </section>
 
+<nav style="background:#ffffff; border-bottom:1px solid #e5e7eb; padding:1rem;">
+  <div style="max-width:900px; margin:auto; display:flex; gap:1.5rem; font-weight:500;">
+    <a href="#about">About</a>
+    <a href="#conditions">Conditions</a>
+    <a href="#sources">Sources</a>
+    <a href="#founder">Founder</a>
+  </div>
+</nav>
 
