--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<section>
+
+</section>
+
   <h2>Conditions Library</h2>
 
   <div class="card">
@@ -28,10 +30,7 @@
 
 <nav style="background:#ffffff; border-bottom:1px solid #e5e7eb; padding:1rem;">
   <div style="max-width:900px; margin:auto; display:flex; gap:1.5rem; font-weight:500;">
-    <a href="#about">About</a>
-    <a href="#conditions">Conditions</a>
-    <a href="#sources">Sources</a>
-    <a href="#founder">Founder</a>
+    
   </div>
 </nav>
 
