--- a/index.html
+++ b/index.html
@@ -1,271 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interactive Conditions Library</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f5f5f5;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Interactive Skin Conditions Library</title>
+<style>
+  body { font-family: Arial, sans-serif; background: #f5f5f5; margin:0; padding:0; }
+  header { position: sticky; top:0; background:#fff; border-bottom:1px solid #e5e7eb; padding:1rem; z-index:100; }
+  header nav div { max-width:900px; margin:auto; display:flex; gap:1.5rem; font-weight:500; }
+  header nav a { text-decoration:none; color:#000; }
+  header nav a:hover { font-weight:bold; }
 
-    header {
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      background: #ffffff;
-      border-bottom: 1px solid #e5e7eb;
-      padding: 1rem;
-    }
+  main { padding:2rem; max-width:1200px; margin:auto; }
+  h2 { text-align:center; margin-bottom:1rem; }
 
-    header nav div {
-      max-width: 900px;
-      margin: auto;
-      display: flex;
-      gap: 1.5rem;
-      font-weight: 500;
-    }
+  #search-bar { width:100%; max-width:400px; padding:0.5rem; margin:0 auto 2rem auto; display:block; border:1px solid #ccc; border-radius:5px; }
 
-    header nav a {
-      text-decoration: none;
-      color: #000;
-    }
+  .grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(180px,1fr)); gap:1rem; }
 
-    header nav a:hover {
-      color: #000;
-      font-weight: bold;
-    }
+  .card { background:#fff; border-radius:10px; padding:1rem; text-align:center; box-shadow:0 2px 6px rgba(0,0,0,0.1); position:relative; display:flex; flex-direction:column; justify-content:space-between; }
 
-    main {
-      padding: 2rem;
-      max-width: 1000px;
-      margin: auto;
-    }
+  .card h3 { margin:0; font-size:1rem; flex:1; display:flex; align-items:center; justify-content:center; }
 
-    h2 {
-      text-align: center;
-      margin-bottom: 1rem;
-    }
+  .more-btn { padding:0.4rem 0.6rem; background:#000; color:#fff; border-radius:5px; cursor:pointer; margin-top:0.5rem; font-size:0.85rem; align-self:flex-end; text-decoration:none; }
 
-    /* Search bar */
-    #search-bar {
-      width: 100%;
-      max-width: 400px;
-      padding: 0.5rem;
-      margin: 0 auto 2rem auto;
-      display: block;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      font-size: 1rem;
-    }
-
-    /* Bingo card grid */
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      gap: 1rem;
-    }
-
-    .card {
-      background: #fff;
-      border-radius: 10px;
-      padding: 1rem;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-
-    .card h3 {
-      margin-top: 0;
-    }
-
-    .tones {
-      display: flex;
-      gap: 0.5rem;
-      margin-bottom: 1rem;
-    }
-
-    .tone {
-      flex: 1;
-      padding: 0.5rem;
-      text-align: center;
-      background: #ccc; /* changed from blue to gray */
-      border-radius: 5px;
-      cursor: pointer;
-      user-select: none;
-      transition: background 0.2s, color 0.2s;
-      color: #000;
-    }
-
-    .tone:hover {
-      background: #000; /* hover black */
-      color: white;
-    }
-
-    .tone.active {
-      background: #000; /* active black */
-      color: white;
-    }
-
-    .description {
-      min-height: 100px;
-      margin-bottom: 1rem;
-    }
-
-    .see-image {
-      padding: 0.5rem;
-      background: #000; /* changed from blue to black */
-      color: white;
-      text-align: center;
-      border-radius: 5px;
-      cursor: pointer;
-      text-decoration: none;
-    }
-
-    .see-image:hover {
-      background: #333;
-    }
-  </style>
+  /* Modal */
+  .modal-bg { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); justify-content:center; align-items:center; z-index:1000; }
+  .modal { background:#fff; border-radius:10px; padding:1.5rem; max-width:800px; width:90%; max-height:90%; overflow-y:auto; position:relative; }
+  .modal h3 { margin-top:0; }
+  .modal .tones { margin-bottom:1rem; display:flex; gap:0.5rem; }
+  .modal .tone { flex:1; padding:0.5rem; text-align:center; background:#ccc; border-radius:5px; cursor:pointer; user-select:none; color:#000; }
+  .modal .tone:hover, .modal .tone.active { background:#000; color:white; }
+  .modal .description { margin-bottom:1rem; }
+  .modal .images { display:grid; grid-template-columns:repeat(2,1fr); gap:0.5rem; margin-bottom:1rem; }
+  .modal .images img { width:100%; border-radius:5px; }
+  .modal .close { position:absolute; top:1rem; right:1rem; cursor:pointer; background:#000; color:#fff; padding:0.3rem 0.6rem; border-radius:5px; }
+</style>
 </head>
 <body>
 
-  <header>
-    <nav>
-      <div>
-        <a href="#about">About</a>
-        <a href="#conditions">Conditions</a>
-        <a href="#sources">Sources</a>
-        <a href="#founder">Founder</a>
-      </div>
-    </nav>
-  </header>
-
-  <main>
-    <h2>Conditions Library</h2>
-    <!-- Search Bar -->
-    <input type="text" id="search-bar" placeholder="Search for a condition...">
-
-    <div class="grid" id="card-grid">
-      <!-- Card 1: Acne Vulgaris -->
-      <div class="card" data-name="acne vulgaris">
-        <h3>Acne Vulgaris</h3>
-        <div class="tones">
-          <div class="tone" data-tone="light">Light</div>
-          <div class="tone" data-tone="medium">Medium</div>
-          <div class="tone" data-tone="dark">Dark</div>
-        </div>
-        <div class="description" id="desc-acne"></div>
-        <a href="#" class="see-image" target="_blank" id="img-acne">See Image</a>
-      </div>
-
-      <!-- Card 2: Atopic Dermatitis -->
-      <div class="card" data-name="atopic dermatitis">
-        <h3>Atopic Dermatitis</h3>
-        <div class="tones">
-          <div class="tone" data-tone="light">Light</div>
-          <div class="tone" data-tone="medium">Medium</div>
-          <div class="tone" data-tone="dark">Dark</div>
-        </div>
-        <div class="description" id="desc-eczema"></div>
-        <a href="#" class="see-image" target="_blank" id="img-eczema">See Image</a>
-      </div>
-
-      <!-- Card 3: Psoriasis -->
-      <div class="card" data-name="psoriasis">
-        <h3>Psoriasis</h3>
-        <div class="tones">
-          <div class="tone" data-tone="light">Light</div>
-          <div class="tone" data-tone="medium">Medium</div>
-          <div class="tone" data-tone="dark">Dark</div>
-        </div>
-        <div class="description" id="desc-psoriasis"></div>
-        <a href="#" class="see-image" target="_blank" id="img-psoriasis">See Image</a>
-      </div>
-
-      <!-- Card 4: Hyperpigmentation -->
-      <div class="card" data-name="hyperpigmentation">
-        <h3>Hyperpigmentation</h3>
-        <div class="tones">
-          <div class="tone" data-tone="light">Light</div>
-          <div class="tone" data-tone="medium">Medium</div>
-          <div class="tone" data-tone="dark">Dark</div>
-        </div>
-        <div class="description" id="desc-hyper"></div>
-        <a href="#" class="see-image" target="_blank" id="img-hyper">See Image</a>
-      </div>
+<header>
+  <nav>
+    <div>
+      <a href="#about">About</a>
+      <a href="#conditions">Conditions</a>
+      <a href="#sources">Sources</a>
+      <a href="#founder">Founder</a>
     </div>
-  </main>
+  </nav>
+</header>
 
-  <script>
-    // Data for each condition and tone
-    const data = {
-      acne: {
-        light: "Erythema (redness), inflammatory papules, pustules.",
-        medium: "Hyperpigmented papules, nodules, less visible redness.",
-        dark: "Post-inflammatory hyperpigmentation, keloid risk, subtle inflammation."
-      },
-      eczema: {
-        light: "Red, inflamed patches with scaling.",
-        medium: "Purple or gray patches, lichenification.",
-        dark: "Ashy, thickened, darkened skin with less visible redness."
-      },
-      psoriasis: {
-        light: "Bright red plaques with silvery scale.",
-        medium: "Salmon-colored plaques with gray scale.",
-        dark: "Violet or dark brown plaques with minimal redness."
-      },
-      hyper: {
-        light: "Mild uneven pigmentation, slight dark spots.",
-        medium: "More noticeable dark patches and blotches.",
-        dark: "Deeply pigmented areas, more prone to contrast with surrounding skin."
-      }
-    };
+<main>
+  <h2>Conditions Library</h2>
+  <input type="text" id="search-bar" placeholder="Search for a condition...">
+  <div class="grid" id="card-grid">
+    <!-- Cards dynamically generated -->
+  </div>
+</main>
 
-    // Image links for each condition and tone
-    const imgLinks = {
-      acne: { light: "#", medium: "#", dark: "#" },
-      eczema: { light: "#", medium: "#", dark: "#" },
-      psoriasis: { light: "#", medium: "#", dark: "#" },
-      hyper: { light: "#", medium: "#", dark: "#" } // Replace '#' with actual image URLs
-    };
+<!-- Modal -->
+<div class="modal-bg" id="modal-bg">
+  <div class="modal">
+    <span class="close" id="modal-close">X</span>
+    <h3 id="modal-title"></h3>
+    <div class="tones">
+      <div class="tone" data-tone="light">Light</div>
+      <div class="tone" data-tone="medium">Medium</div>
+      <div class="tone" data-tone="dark">Dark</div>
+    </div>
+    <div class="description" id="modal-desc"></div>
+    <div class="images" id="modal-images"></div>
+  </div>
+</div>
 
-    // Tone button functionality
-    document.querySelectorAll('.card').forEach(card => {
-      const desc = card.querySelector('.description');
-      const seeImg = card.querySelector('.see-image');
-      const tones = card.querySelectorAll('.tone');
+<script>
+const conditions = [
+  {name:"Acne Vulgaris", key:"acne"},
+  {name:"Atopic Dermatitis", key:"eczema"},
+  {name:"Psoriasis", key:"psoriasis"},
+  {name:"Hyperpigmentation", key:"hyper"},
+  // add more as needed
+];
 
-      tones.forEach(tone => {
-        tone.addEventListener('click', () => {
-          tones.forEach(t => t.classList.remove('active'));
-          tone.classList.add('active');
+const data = {
+  acne:{light:"Red papules & pustules", medium:"Hyperpigmented nodules", dark:"Keloid risk & subtle inflammation"},
+  eczema:{light:"Red, inflamed patches", medium:"Grayish patches", dark:"Ashy thickened skin"},
+  psoriasis:{light:"Bright red plaques", medium:"Salmon plaques", dark:"Violet or dark brown plaques"},
+  hyper:{light:"Mild uneven pigmentation", medium:"Noticeable dark patches", dark:"Deeply pigmented areas"}
+};
 
-          const conditionKey = card.querySelector('h3').textContent.toLowerCase().split(' ')[0];
-          const toneKey = tone.dataset.tone;
+const imgLinks = {
+  acne:{light:["#","#"], medium:["#","#"], dark:["#","#"]},
+  eczema:{light:["#","#"], medium:["#","#"], dark:["#","#"]},
+  psoriasis:{light:["#","#"], medium:["#","#"], dark:["#","#"]},
+  hyper:{light:["#","#"], medium:["#","#"], dark:["#","#"]}
+};
 
-          desc.textContent = data[conditionKey][toneKey];
-          seeImg.href = imgLinks[conditionKey][toneKey];
-        });
-      });
-    });
+// Generate cards
+const grid = document.getElementById("card-grid");
+conditions.forEach(c=>{
+  const card = document.createElement("div");
+  card.className = "card";
+  card.dataset.name = c.name.toLowerCase();
+  card.innerHTML = `<h3>${c.name}</h3><a href="#" class="more-btn">More Info</a>`;
+  grid.appendChild(card);
+});
 
-    // Search bar functionality
-    const searchBar = document.getElementById('search-bar');
-    searchBar.addEventListener('input', () => {
-      const query = searchBar.value.toLowerCase();
-      document.querySelectorAll('.card').forEach(card => {
-        const name = card.dataset.name.toLowerCase();
-        card.style.display = name.includes(query) ? 'flex' : 'none';
-      });
-    });
-  </script>
+// Modal
+const modalBg = document.getElementById("modal-bg");
+const modalTitle = document.getElementById("modal-title");
+const modalDesc = document.getElementById("modal-desc");
+const modalImages = document.getElementById("modal-images");
+const toneButtons = document.querySelectorAll(".modal .tone");
+const closeBtn = document.getElementById("modal-close");
+
+grid.addEventListener("click", e=>{
+  if(e.target.classList.contains("more-btn")){
+    e.preventDefault();
+    const card = e.target.parentElement;
+    const key = card.dataset.name.split(" ")[0];
+    modalTitle.textContent = card.dataset.name;
+    modalDesc.textContent = data[key].light;
+    updateImages(key,"light");
+    modalBg.style.display="flex";
+    toneButtons.forEach(t=>t.classList.remove("active"));
+    toneButtons[0].classList.add("active");
+    modalBg.dataset.key = key;
+  }
+});
+
+toneButtons.forEach(btn=>{
+  btn.addEventListener("click",()=>{
+    toneButtons.forEach(t=>t.classList.remove("active"));
+    btn.classList.add("active");
+    const key = modalBg.dataset.key;
+    const tone = btn.dataset.tone;
+    modalDesc.textContent = data[key][tone];
+    updateImages(key,tone);
+  });
+});
+
+closeBtn.addEventListener("click",()=>{ modalBg.style.display="none"; });
+
+function updateImages(key,tone){
+  modalImages.innerHTML="";
+  imgLinks[key][tone].forEach(src=>{
+    const img = document.createElement("img");
+    img.src=src;
+    modalImages.appendChild(img);
+  });
+}
+
+// Search
+document.getElementById("search-bar").addEventListener("input",e=>{
+  const q=e.target.value.toLowerCase();
+  document.querySelectorAll(".card").forEach(c=>{
+    c.style.display = c.dataset.name.includes(q) ? "flex":"none";
+  });
+});
+</script>
 
 </body>
 </html>
+
 
 
 
